@@ -191,7 +191,9 @@ int p_create_database(void) {
 
    P_SYM_INIT(jump_label_mutex)
    P_SYM_INIT(text_mutex)
+#ifdef CONFIG_TRACEPOINTS
    P_SYM_INIT(tracepoints_mutex)
+#endif
 
    /*
     * First gather information about CPUs in the system - CRITICAL !!!
